fix styling & layout issues
- black bg in expansion panels
- black bg in Send > Send all
- base layout in Create wallet

--- a/src/app/main-wallet/create-wallet/create-wallet.component.scss
+++ b/src/app/main-wallet/create-wallet/create-wallet.component.scss
@@ -196,7 +196,6 @@ mat-hint.error {
   }
   & > .content {
     background: $bg;
-    margin-left: ($installer-sidebar-width + $installer-minisidebar-width);
     .header-main {
       border-bottom: 1px solid $bg-shadow;
       background: $color-white;
