--- a/src/assets/_theme-default.scss
+++ b/src/assets/_theme-default.scss
@@ -25,7 +25,7 @@ $theme-background: (
   focused-button:           var(--color-white),
   selected-button:          var(--color-alert),
   selected-disabled-button: var(--color-warning),
-  disabled-button-toggle:   var(--text),
+  disabled-button-toggle:   var(--bg-muted),
   unselected-chip:          var(--color-info),
   disabled-list-option:     var(--bg-muted),
 );
