--- a/src/assets/scss/_material-components.scss
+++ b/src/assets/scss/_material-components.scss
@@ -594,6 +594,12 @@ mat-expansion-panel.mat-expansion-panel {
       right: 8px;
     }
   }
+  &.mat-form-field-disabled {
+    .mat-form-field-flex {
+      background: var(--color-white);
+      color: var(--text-muted);
+    }
+  }
   
   // Boxed, standalone variant (common)
   &.--boxed {
